infra/k8s/exercise-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exercise-depl
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: exercise
  template:
    metadata:
      labels:
        app: exercise
    spec:
      containers:
        - name: exercise
          image: mbongeni/exercise
---

apiVersion: v1 
kind: Service
metadata: 
  name: exercise-srv
spec:
  selector:
    app: exercise
  ports:
    - name: exercise
      protocol: TCP
      port: 3000
      targetPort: 3000
