infra/k8s/exercise-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exercise-mongo-depl
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: exercise-mongo
  template:
    metadata:
      labels:
        app: exercise-mongo
    spec:
      containers:
        - name: exercise-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata: 
  name: exercise-mongo-srv
spec:
  selector:
    app: exercise-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
