infra/k8s/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
    name: ingress-service
    annotations:
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/use-regex: "true"
      nginx.ingress.kubernetes.io/enable-cors: "true"
      nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
      nginx.ingress.kubernetes.io/cors-allow-origin: 'https://checkout.stripe.com'
      nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec: 
    rules:
      - host: olyup.dev
        http:
          paths:
            - path: /api/users/?(.*)
              backend:
                serviceName: auth-srv
                servicePort: 3000
            - path: /api/athletic/?(.*)
              backend:
                serviceName: athletic-srv
                servicePort: 3000
            - path: /api/exercise/?(.*)
              backend:
                serviceName: exercise-srv
                servicePort: 3000
            - path: /api/payments/?(.*)
              backend:
                serviceName: payments-srv
                servicePort: 3000
            - path: /?(.*)
              backend:
                serviceName: client-srv
                servicePort: 3000
